--- a/cascos.html
+++ b/cascos.html
@@ -53,6 +53,9 @@
     <section class="contenedor">
         <div class="container">
         </div>
+        <p class="texto">Los cascos son muy importantes para la comunicación y para la experiencia del video juego, ya que los desarroyadores hacen los juegos realistas en video y audio,
+            tienen una utilidad también competitiva para escuchar a tus enemigos como ejemplo de juegos que tenen el audio para saber la posicion del enemigo.
+        </p>
     </div>
     </section>
 </body>
@@ -67,7 +70,7 @@
     <section class="ftr">
         <h3>Contacto</h3>
         <ul class="content">
-            <li><a rel="nofollow" href="https://seralbla.com/">Sergiseralbla@gmail.com</a></li>
+            <li><a rel="nofollow" href="index.html">chispinela1234@gmail.com</a></li>
             <li><a rel="nofollow" href="">Sobre nosotros</a></li>
         </ul>
     </section>
