--- a/webcam.html
+++ b/webcam.html
@@ -67,7 +67,7 @@
     <section class="ftr">
         <h3>Contacto</h3>
         <ul class="content">
-            <li><a rel="nofollow" href="https://seralbla.com/">Sergiseralbla@gmail.com</a></li>
+            <li><a rel="nofollow" href="index.html">chispinela1234@gmail.com</a></li>
             <li><a rel="nofollow" href="">Sobre nosotros</a></li>
         </ul>
     </section>
