--- a/cascos.html
+++ b/cascos.html
@@ -53,9 +53,11 @@
     <section class="contenedor">
         <div class="container">
         </div>
+        <h2 class="titulo">Cascos</h2>
         <p class="texto">Los cascos son muy importantes para la comunicación y para la experiencia del video juego, ya que los desarroyadores hacen los juegos realistas en video y audio,
             tienen una utilidad también competitiva para escuchar a tus enemigos como ejemplo de juegos que tenen el audio para saber la posicion del enemigo.
         </p>
+        <img alt=Foto-cascos width=50 src=pngegg.png
     </div>
     </section>
 </body>
