--- a/monitor.html
+++ b/monitor.html
@@ -52,6 +52,7 @@
                       
     <section class="contenedor">
         <div class="container">
+            <h2 class="titulo">Monitor</h2>
             <p class="texto">Los monitores dan la informacion sobre el jugo donde usted puede ganar o perder depende el Hz y el Fov. Cuando más Hz tengas más fluido iran las ventanas utilizadas y el Fov es lo parecido pera para los videojuegos.</p>
         </div>
         <img alt=Foto-mirco width=50 src=https://m.media-amazon.com/images/I/718s5I0t4mL._AC_SY450_.jpg
