--- a/webcam.html
+++ b/webcam.html
@@ -53,6 +53,8 @@
     <section class="contenedor">
         <div class="container">
         </div>
+        <h2 class="titulo">Webcam</h2>
+        
     </div>
     </section>
 </body>
