--- a/microfono.html
+++ b/microfono.html
@@ -52,6 +52,7 @@
                       
     <section class="contenedor">
         <div class="container">
+            <h2 class="titulo">Microfono</h2>
             <p class="texto">Los microfonos son esenciales para la comunicación entre los jugadores y ganar las partidas gracias a la comunicación, hay micros baratos con muy mala calidad y micros caros que hacen lo mismo que uno normalito. Aqui te dejamos los mejores con el mejor precio y calidad. </p
         </div>
         <img alt=Foto-mirco width=100 src=https://m.media-amazon.com/images/I/71jpWILLz1L._AC_SL1500_.jpg class="bombilla">
