--- a/cascos.html
+++ b/cascos.html
@@ -57,7 +57,7 @@
         <p class="texto">Los cascos son muy importantes para la comunicación y para la experiencia del video juego, ya que los desarroyadores hacen los juegos realistas en video y audio,
             tienen una utilidad también competitiva para escuchar a tus enemigos como ejemplo de juegos que tenen el audio para saber la posicion del enemigo.
         </p>
-        <img alt=Foto-cascos width=50 src=pngegg.png
+        <img alt=Foto-cascos width=50 src=https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/04/299231-auriculares-inalambricos-gaming-logitech-g933-artemis-spectrum.png
     </div>
     </section>
 </body>
