--- a/webcam.html
+++ b/webcam.html
@@ -54,8 +54,11 @@
         <div class="container">
         </div>
         <h2 class="titulo">Webcam</h2>
-        
+        <p class="texto">La webcam la realidad para un gamer no es esencial pero tenerla siempre esta bien y que sea al mejor precio y calidad mejor; estas camaritas necesarias para que cualquier videollamada se nos vea bien no, sino super bien.</p>
     </div>
+    <div
+    <img alt=Foto-cascos width=50 src=pngegg.png
+</div>
     </section>
 </body>
       <footer>
