--- a/leds.html
+++ b/leds.html
@@ -54,6 +54,8 @@
         <div class="container">
         </div>
         <h2 class="titulo">Leds</h2>
+
+        <img alt=Foto-cascos width=50 src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnbXi4ookcl7mEcsz9kcG92R3MB8_IaVzwIg&usqp=CAU
         
     </div>
     </section>
