--- a/microfono.html
+++ b/microfono.html
@@ -54,8 +54,21 @@
         <div class="container">
             <h2 class="titulo">Microfono</h2>
             <p class="texto">Los microfonos son esenciales para la comunicación entre los jugadores y ganar las partidas gracias a la comunicación, hay micros baratos con muy mala calidad y micros caros que hacen lo mismo que uno normalito. Aqui te dejamos los mejores con el mejor precio y calidad. </p
+            <img alt=Foto-mirco width=100 src=https://m.media-amazon.com/images/I/71jpWILLz1L._AC_SL1500_.jpg class="bombilla">
+                <h2 class="titulo"> Los pros y contras de un buen microfono</h2>
+                <p class="texto"> Las ventajas del microfono gaming son ofrecer una calidad de sonido global aún mejor que la de un micrófono USB y va a recoger más matices tanto en voces como en instrumentos acústicos. Para las actuaciones vocales en directo, donde el volumen del ámbito puede ser prominente y la supresión de la retroalimentación es importante, la mejor opción es usar micrófonos cardioides.  </p> 
+                <p class="texto"> Estos tipos de microfonos muy utilizados aún y así suelen tener el inconveniente de tener un alto precio y ocupar un gran espacio que otro tipo de microfonos no ocuparian. </p>
+                <h2 class="titulo">Modelos de microfonos</h2>
+                             
+                <ul> <li> Neewer NW-800  </li>
+                     <li> Neewer NW-700 </li>
+                     <li>Thronmax Mdrill One </li>
+                     <li>Thronmax Fireball (NEWM9) </il>
+                     <li>Thronmax Mdrill One Pro </li> 
+
+            <img alt="foto de microfono gaming" width="100" src="https://thumbs.static-thomann.de/thumb/orig/pics/bdb/129929/11557929_800.webp"
+
         </div>
-        <img alt=Foto-mirco width=100 src=https://m.media-amazon.com/images/I/71jpWILLz1L._AC_SL1500_.jpg class="bombilla">
     </div>
     </section>
 </body>
