--- a/webcam.html
+++ b/webcam.html
@@ -56,8 +56,8 @@
         <h2 class="titulo">Webcam</h2>
         <p class="texto">La webcam la realidad para un gamer no es esencial pero tenerla siempre esta bien y que sea al mejor precio y calidad mejor; estas camaritas necesarias para que cualquier videollamada se nos vea bien no, sino super bien.</p>
     </div>
-    <div
-    <img alt=Foto-cascos width=50 src=pngegg.png
+
+    <img alt=Foto-webcam width=50 href="https://ibb.co/6HdRh73"><img src="https://i.ibb.co/fkcYRzh/CREATOR-gd-jpeg-v1-0-using-IJG-JPEG-v90-quality-100.jpg" alt="CREATOR-gd-jpeg-v1-0-using-IJG-JPEG-v90-quality-100" border="0"></a>
 </div>
     </section>
 </body>
