--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
         <nav>
             <ul>
-            <li><a rel="nofollow" href="http://profesionales-gaming.vercel.app/">Inicio</a></li>
+            <li><a rel="nofollow" href="index.html">Inicio</a></li>
              <li><a>Marcas</a>
             <ul>
                 <li><a target="_blank" rel="nofollow" href="https://www.amazon.com/">Amazon</a></li>
@@ -111,8 +111,8 @@
         <h3>Privacidad</h3>
         <ul class="content">
             <li><a rel="nofollow" href="politica-de-privacidad.html">Política de privacidad</a></li>
-            <li><a rel="nofollow" href="https://www.privacypolicies.com/live/0af25bd1-b731-4340-8943-b6367564c346">Política de Condiciones</a></li>
-            <li><a rel="nofollow" href="https://lamparas-online.vercel.app/avisolegal.html">Aviso legal</a></li>
+            <li><a rel="nofollow" href="terminodecondiciones.html">Política de Condiciones</a></li>
+            <li><a rel="nofollow" href="avisolegal.html">Aviso legal</a></li>
         </ul>
     
 </section>
