--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <script data-ad-client="ca-pub-6077902786722235" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta name="google-site-verification" content="1OOPdMs9pTMvcM-zedsWkXIUnsLVvmzOW_Hu4U-NnHA" />
     <meta name="robots" content="index, archive"/>
-    <meta name="keywords" content="Ordenadores,Monitores,Ratones,Gaming,Cascos,Microfonos">
+    <meta name="keywords" content="Ordenadores,Monitores,Ratones,Gaming,Cascos,Microfonos,webcams,gaming,sillas,leds">
     <meta charset="utf-8">
  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-788R0DC0RB"></script>
