--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="hover-galeria"><h2>Microfono</h2></div>
         </div> <div class="row" onclick="Funcion2();">
             <a href="https://i.blogs.es/cb463a/teclado-mecanico/450_1000.jpg" rel="nofollow"><img src="https://i.blogs.es/cb463a/teclado-mecanico/450_1000.jpg" class="lamparatecho" alt="lámpara de techo"></a>
-            <div class="hover-galeria"><h2>Tecaldo</h2></div>
+            <div class="hover-galeria"><h2>Teclado</h2></div>
         </div><div class="row" onclick="Funcion3();">
             <a href="lamparadearaña.html" rel="nofollow"><img src="http://compras.cuponidad.pe/images/Deals/mousegamerbk.jpg" class="lamparaaraña" alt="lámpara de araña"></a>
             <div class="hover-galeria"><h2>Raton</h2></div>
